[package]
name = "gstreamer-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures-channel = "0.3.28"
futures-util = "0.3.28"
gst = { package = "gstreamer", version = "0.20.5" }
# gst-webrtc = { package = "gstreamer-webrtc", version = "0.20.4" }
# gst-sdp = { package = "gstreamer-sdp", version = "0.20.0" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
